--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
-title: Python3-linkedin
-description: Python interface to the LinkedIn API
+title: pyEthOS
+description: Python 2 and 3 interface to the EthOS custom Dashboard API
 google_analytics: 
 show_downloads: true
 theme: jekyll-theme-architect
