--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 certifi==2017.4.17
 chardet==3.0.4
+decorator==4.0.11
 idna==2.5
 requests==2.17.3
+six==1.10.0
 urllib3==1.21.1
+validators==0.12.0
