--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ certifi==2017.4.17
 chardet==3.0.4
 decorator==4.0.11
 idna==2.5
+nose==1.3.7
+pyethos==1.2.0
 requests==2.17.3
 six==1.10.0
 urllib3==1.21.1
