--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,13 @@ python:
 - 3.5
 - 3.6
 
-script: python setup.py test
+install:
+  - pip install -r requirements.txt
+
+script:
+  coverage run --source=pyEthOS setup.py test
+after_success:
+  coveralls
 
 notifications:
 - email: false
