--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 certifi==2017.4.17
 chardet==3.0.4
+coverage==4.4.1
+coveralls==1.1
 decorator==4.0.11
+docopt==0.6.2
 idna==2.5
 nose==1.3.7
-pyethos==1.2.0
+pyethos==1.3.0
 requests==2.17.3
 six==1.10.0
 urllib3==1.21.1
